--- a/extensions/system/theme/less/uikit/uikit.less
+++ b/extensions/system/theme/less/uikit/uikit.less
@@ -85,4 +85,5 @@
 @import "addons/htmleditor.less";
 @import "addons/notify.less";
 @import "addons/nestable.less";
+@import "addons/sortable.less";
 @import "addons/sticky.less";
