--- a/extensions/system/theme/less/theme.less
+++ b/extensions/system/theme/less/theme.less
@@ -83,6 +83,12 @@ html { overflow-y: scroll; }
     -webkit-transform: translate3d(0,0,0);
 }
 
+@media (max-width: @breakpoint-small-max) {
+
+    .tm-toolbar { padding: 10px 0; }
+
+}
+
 
 /* Main
  ========================================================================== */
