--- a/extensions/system/theme/css/theme.css
+++ b/extensions/system/theme/css/theme.css
@@ -7618,28 +7618,34 @@ a.uk-datepicker-table-muted {
   color: #f0615b;
 }
 /* ========================================================================
-   Component: sortable
+   Component: Sortable
  ========================================================================== */
 .uk-sortable {
   position: relative;
 }
-.uk-sortable [draggable] {
+/*
+ * Makes text unselectable
+ */
+.uk-sortable > * {
   -moz-user-select: none;
-  -khtml-user-select: none;
   -webkit-user-select: none;
-  -o-user-select: none;
+  -ms-user-select: none;
   user-select: none;
 }
-.uk-sortable [draggable] * {
-  -moz-user-drag: none;
-  -khtml-user-drag: none;
+/*
+ * Prevents images and links from being dragged (default browser behavior)
+ * Currently only works in Webkit
+ */
+.uk-sortable > * * {
   -webkit-user-drag: none;
-  -o-user-drag: none;
   user-drag: none;
 }
+/* Sub-modifier `uk-sortable-dragged`
+ ========================================================================== */
 .uk-sortable-dragged {
-  pointer-events: none;
   position: absolute;
+  z-index: 1050;
+  pointer-events: none;
 }
 /* Sub-modifier `uk-sortable-placeholder`
  ========================================================================== */
@@ -7647,9 +7653,16 @@ a.uk-datepicker-table-muted {
   opacity: 0;
 }
 /* Sub-modifier `uk-sortable-over`
+ * Only if `warp:true`
  ========================================================================== */
 .uk-sortable-over {
-  opacity: .25;
+  opacity: 0.3;
+}
+/* Sub-object `uk-nestable-moving`
+ ========================================================================== */
+.uk-sortable-moving,
+.uk-sortable-moving * {
+  cursor: move;
 }
 /* ========================================================================
    Component: Sticky
