fixed tm-toolbar buttons displaced when modal open

--- a/extensions/system/theme/css/theme.css
+++ b/extensions/system/theme/css/theme.css
@@ -8134,6 +8134,8 @@ html {
   top: 61px;
   left: 0;
   z-index: 1;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   width: 100%;
   padding: 15px 0;
   border-bottom: 1px solid #e5e5e5;
