--- a/extensions/system/theme/less/theme.less
+++ b/extensions/system/theme/less/theme.less
@@ -75,6 +75,8 @@ html { overflow-y: scroll; }
     top: 61px;
     left: 0;
     z-index: 1;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
     width: 100%;
     padding: 15px 0;
     border-bottom: 1px solid #e5e5e5;
