cleanup registration view markup

--- a/themes/alpha/less/uikit/uikit.less
+++ b/themes/alpha/less/uikit/uikit.less
@@ -57,5 +57,7 @@
 // Add-ons
 // ========================================================================
 
+@import "../../../../vendor/assets/uikit/less/addons/form-password.less";
+
 @import "../../../../vendor/assets/uikit/less/addons/search.less";
 @import "addons/search.less";
