--- a/themes/alpha/css/theme.css
+++ b/themes/alpha/css/theme.css
@@ -3162,6 +3162,9 @@ select.uk-form-width-mini {
   display: inline-block;
   max-width: 100%;
 }
+/*
+ * 1. Make form element clickable through icon
+ */
 .uk-form-icon > [class*='uk-icon-'] {
   position: absolute;
   top: 50%;
@@ -3170,6 +3173,8 @@ select.uk-form-width-mini {
   font-size: 14px;
   color: #aaaaac;
   text-align: center;
+  /* 1 */
+  pointer-events: none;
 }
 .uk-form-icon:not(.uk-form-icon-flip) > input {
   padding-left: 35px !important;
@@ -5223,10 +5228,13 @@ a.uk-thumbnail:focus {
 }
 /*
  * Hover
- * 1. Use optional `uk-overlay-toggle` to trigger the overlay earlier
+ * 1. `uk-hover` to support touch devices
+ * 2. Use optional `uk-overlay-toggle` to trigger the overlay earlier
  */
 .uk-overlay:hover .uk-overlay-area,
-.uk-overlay-toggle:hover .uk-overlay-area {
+.uk-overlay.uk-hover .uk-overlay-area,
+.uk-overlay-toggle:hover .uk-overlay-area,
+.uk-overlay-toggle.uk-hover .uk-overlay-area {
   opacity: 1;
 }
 /*
@@ -5324,10 +5332,13 @@ a.uk-thumbnail:focus {
 }
 /*
  * Hover
- * 1. Use optional `uk-overlay-toggle` to trigger the overlay earlier
+ * 1. `uk-hover` to support touch devices
+ * 2. Use optional `uk-overlay-toggle` to trigger the overlay earlier
  */
 .uk-overlay:hover .uk-overlay-caption,
-.uk-overlay-toggle:hover .uk-overlay-caption {
+.uk-overlay.uk-hover .uk-overlay-caption,
+.uk-overlay-toggle:hover .uk-overlay-caption,
+.uk-overlay-toggle.uk-hover .uk-overlay-caption {
   opacity: 1;
 }
 /* ========================================================================
@@ -6800,7 +6811,7 @@ a.uk-thumbnail:focus {
 }
 /*
  * Visibility
- * Avoids setting display to `block`
+ * Avoids setting display to `block` so it works also with `inline-block` and `table`
  */
 /* Desktop and bigger */
 @media (min-width: 960px) {
@@ -6814,7 +6825,7 @@ a.uk-thumbnail:focus {
     display: none !important;
   }
 }
-/* Only tablets portrait */
+/* Tablets portrait */
 @media (min-width: 768px) and (max-width: 959px) {
   .uk-visible-small {
     display: none !important;
@@ -6826,7 +6837,7 @@ a.uk-thumbnail:focus {
     display: none !important;
   }
 }
-/* Phone landscape and smaller */
+/* Phone landscape and smaller*/
 @media (max-width: 767px) {
   .uk-visible-medium {
     display: none !important;
