cleanup sortable in main dropdown navigation

--- a/extensions/system/assets/less/pagekit.less
+++ b/extensions/system/assets/less/pagekit.less
@@ -404,6 +404,7 @@
  ========================================================================== */
 
 .pk-panel-icon {
+    padding: 10px 0;
     color: #444;
     text-align: center;
 }
