--- a/extensions/system/theme/less/theme.less
+++ b/extensions/system/theme/less/theme.less
@@ -51,16 +51,10 @@ html { overflow-y: scroll; }
 
 }
 
-.tm-dropdown .uk-grid { margin-top: -25px; }
-.tm-dropdown .uk-grid > * { padding-top: 25px; }
-
-.tm-menu-dragged > a {
-    display: inline-block;
+.tm-sortable-dragged .pk-panel-icon {
     background: @dropdown-background;
-    padding: 20px;
-    border-top: 1px solid #eee;
+    border: 1px solid @global-border;
     border-radius: 3px;
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.18);
 }
 
 
