--- a/extensions/system/theme/css/theme.css
+++ b/extensions/system/theme/css/theme.css
@@ -8062,6 +8062,7 @@ a.uk-datepicker-table-muted {
 /* `pk-panel-icon`
  ========================================================================== */
 .pk-panel-icon {
+  padding: 10px 0;
   color: #444;
   text-align: center;
 }
@@ -8121,19 +8122,10 @@ html {
     margin-top: 0;
   }
 }
-.tm-dropdown .uk-grid {
-  margin-top: -25px;
-}
-.tm-dropdown .uk-grid > * {
-  padding-top: 25px;
-}
-.tm-menu-dragged > a {
-  display: inline-block;
+.tm-sortable-dragged .pk-panel-icon {
   background: #ffffff;
-  padding: 20px;
-  border-top: 1px solid #eee;
+  border: 1px solid #e5e5e5;
   border-radius: 3px;
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.18);
 }
 /* Option toolbar
 ========================================================================== */
