--- a/extensions/system/assets/less/pagekit.less
+++ b/extensions/system/assets/less/pagekit.less
@@ -16,12 +16,25 @@
 
 }
 
+/* Modifier `pk-toolbar`
+========================================================================== */
+
+/*
+ * Only if toolbar is inside a modal
+ */
+
+.uk-modal .pk-toolbar {
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid @global-border;
+}
+
 
 /* Modifier `pk-breadcrumb`
 ========================================================================== */
 
 .pk-breadcrumb {
-    margin: -10px 0 20px 0;
+    margin: 0 0 20px 0;
     font-size: 12px;
 }
 
