cleanup blog settings markup

--- a/extensions/system/theme/less/uikit/form.less
+++ b/extensions/system/theme/less/uikit/form.less
@@ -30,7 +30,7 @@
 
 @form-small-height:                             @global-height-small;
 @form-large-height:                             @global-height-large;
-@form-small-font-size:                          round(@global-font-size * 0.85); // 12px / 14px
+@form-small-font-size:                          @global-font-size; // 14px / 16px
 @form-large-font-size:                          round(@global-font-size * 1.14); // 16px / 18px
 
 @form-danger-border:                            @global-danger-background;
