cleanup markup in blog comment view

--- a/extensions/system/assets/less/pagekit.less
+++ b/extensions/system/assets/less/pagekit.less
@@ -118,6 +118,17 @@
 .pk-overlay-border { border: 1px dashed #ddd; }
 
 
+/* Text utility `pk-text-left-large`
+========================================================================== */
+
+/* Desktop and bigger */
+@media (min-width: 960px) {
+
+    .pk-text-right-large { text-align: right !important; }
+
+}
+
+
 /* Sub-modifier `pk-table-subheading`
 ========================================================================== */
 
