added badges for comments markup

--- a/extensions/system/assets/less/pagekit.less
+++ b/extensions/system/assets/less/pagekit.less
@@ -30,7 +30,18 @@
 }
 
 
-/* Modifier `pk-breadcrumb`
+/* Modifier `pk-badge`
+========================================================================== */
+
+.pk-badge {
+    background-color: @global-default-active-background;
+    color: @global-muted-color;
+}
+
+.pk-badge:hover { color: @global-muted-color; }
+
+
+/* Modifier `pk-badge`
 ========================================================================== */
 
 .pk-breadcrumb {
