--- a/themes/alpha/less/uikit/badge.less
+++ b/themes/alpha/less/uikit/badge.less
@@ -13,6 +13,7 @@
 @badge-line-height:                             round(@badge-font-size * 1.36); // 14px / 16px
 @badge-color:                                   @global-contrast-color;
 @badge-text-transform:                          uppercase;
+@badge-hover-color:                             @global-contrast-color;
 
 @badge-notification-font-size:                  round(@global-font-size * 0.85); // 12px / 14px
 @badge-notification-line-height:                round(@badge-notification-font-size * 1.46); // 18px / 20px
