--- a/themes/alpha/less/uikit/variables.less
+++ b/themes/alpha/less/uikit/variables.less
@@ -3,7 +3,7 @@
 //
 // ========================================================================
 
-@import 'https://fonts.googleapis.com/css?family=Open+Sans:300,400,600';
+@import 'https://fonts.googleapis.com/css?family=Open+Sans:300,400,600&subset=latin,latin-ext';
 
 
 // Global variables
