better toolbar z-index in system theme

--- a/extensions/system/theme/less/theme.less
+++ b/extensions/system/theme/less/theme.less
@@ -68,7 +68,7 @@ html { overflow-y: scroll; }
     position: absolute;
     top: 61px;
     left: 0;
-    z-index: 50;
+    z-index: @global-z-index - 10;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     width: 100%;
