updated uikit in alpha theme

--- a/themes/alpha/less/uikit/uikit.less
+++ b/themes/alpha/less/uikit/uikit.less
@@ -58,6 +58,7 @@
 // ========================================================================
 
 @import "../../../../vendor/assets/uikit/less/addons/form-password.less";
+@import "addons/form-password.less";
 
 @import "../../../../vendor/assets/uikit/less/addons/search.less";
 @import "addons/search.less";
