--- a/themes/alpha/less/uikit/breadcrumb.less
+++ b/themes/alpha/less/uikit/breadcrumb.less
@@ -14,7 +14,7 @@
 // New
 //
 
-@breadcrumb-font-size:                          round(@global-font-size * 0.85); // 12px
+@breadcrumb-font-size:                          round((@global-font-size * 0.85)); // 12px
 
 
 // Component
