--- a/themes/alpha/less/uikit/button.less
+++ b/themes/alpha/less/uikit/button.less
@@ -17,9 +17,9 @@
 @button-small-line-height:                      @global-height-small - 2;
 @button-large-line-height:                      @global-height-large - 2;
 
-@button-mini-font-size:                         round(@global-font-size * 0.78); // 11px / 12px
-@button-small-font-size:                        round(@global-font-size * 0.85); // 12px / 14px
-@button-large-font-size:                        round(@global-font-size * 1.14); // 16px / 18px
+@button-mini-font-size:                         round((@global-font-size * 0.78)); // 11px / 12px
+@button-small-font-size:                        round((@global-font-size * 0.85)); // 12px / 14px
+@button-large-font-size:                        round((@global-font-size * 1.14)); // 16px / 18px
 
 @button-padding-horizontal:                     15px;
 @button-mini-padding-horizontal:                8px;
@@ -66,7 +66,7 @@
 // New
 //
 
-@button-font-size:                              round(@global-font-size * 0.92); // 13px
+@button-font-size:                              round((@global-font-size * 0.92)); // 13px
 @button-border:                                 rgba(0,0,0,0.1);
 @button-hover-border:                           rgba(0,0,0,0.15);
 
