--- a/themes/alpha/less/uikit/icon.less
+++ b/themes/alpha/less/uikit/icon.less
@@ -13,7 +13,7 @@
 @icon-button-width:                             50px;
 @icon-button-height:                            @icon-button-width;
 @icon-button-background:                        @global-default-background;
-@icon-button-font-size:                         round(@icon-button-width * 0.5);
+@icon-button-font-size:                         round((@icon-button-width * 0.5));
 @icon-button-border-radius:                     @global-border-radius;
 @icon-button-color:                             @global-color;
 
