--- a/themes/alpha/less/uikit/subnav.less
+++ b/themes/alpha/less/uikit/subnav.less
@@ -22,7 +22,7 @@
 // New
 //
 
-@subnav-font-size:                              round(@global-font-size * 0.92); // 13px
+@subnav-font-size:                              round((@global-font-size * 0.92)); // 13px
 
 
 // Component
