--- a/extensions/system/theme/less/uikit/form.less
+++ b/extensions/system/theme/less/uikit/form.less
@@ -25,13 +25,13 @@
 @form-gutter:                                   @global-margin;
 
 @form-legend-border:                            @global-border;
-@form-legend-font-size:                         round(@global-font-size * 1.28); // 18px / 20px
-@form-legend-line-height:                       round(@form-legend-font-size * 1.68); // 30px / 34px
+@form-legend-font-size:                         round((@global-font-size * 1.28)); // 18px / 20px
+@form-legend-line-height:                       round((@form-legend-font-size * 1.68)); // 30px / 34px
 
 @form-small-height:                             @global-height-small;
 @form-large-height:                             @global-height-large;
 @form-small-font-size:                          @global-font-size; // 14px / 16px
-@form-large-font-size:                          round(@global-font-size * 1.14); // 16px / 18px
+@form-large-font-size:                          round((@global-font-size * 1.14)); // 16px / 18px
 
 @form-danger-border:                            @global-danger-background;
 @form-danger-background:                        @global-background;
@@ -57,9 +57,9 @@
 // New
 //
 
-@form-stacked-font-size:                        round(@global-font-size * 0.85); // 12px / 14px
-@form-stacked-line-height:                      round(@form-stacked-font-size *  1.46); // 18px / 20px
-                   
+@form-stacked-font-size:                        round((@global-font-size * 0.85)); // 12px / 14px
+@form-stacked-line-height:                      round((@form-stacked-font-size *  1.46)); // 18px / 20px
+
 
 // Component
 // ========================================================================
@@ -88,7 +88,7 @@
 //
 // Success state
 //
- 
+
 .hook-form-success() {}
 
 
@@ -121,5 +121,5 @@
         color: @global-muted-color;
         font-style: italic;
     }
-    
+
 }
