--- a/extensions/system/theme/less/uikit/navbar.less
+++ b/extensions/system/theme/less/uikit/navbar.less
@@ -24,11 +24,11 @@
 @navbar-nav-active-background:                  @global-navbar-background;
 @navbar-nav-active-color:                       @global-navbar-hover-color;
 
-@navbar-brand-font-size:                        round(@global-font-size * 1.28); // 18px / 20px
+@navbar-brand-font-size:                        round((@global-font-size * 1.28)); // 18px / 20px
 @navbar-brand-color:                            @global-navbar-color;
 @navbar-brand-hover-color:                      @global-navbar-hover-color;
 
-@navbar-toggle-font-size:                       round(@global-font-size * 1.28); // 18px / 20px
+@navbar-toggle-font-size:                       round((@global-font-size * 1.28)); // 18px / 20px
 @navbar-toggle-color:                           @global-navbar-color;
 @navbar-toggle-hover-color:                     @global-navbar-hover-color;
 
