--- a/extensions/system/theme/less/uikit/panel.less
+++ b/extensions/system/theme/less/uikit/panel.less
@@ -8,8 +8,8 @@
 // ========================================================================
 
 @panel-title-margin-bottom:                     @global-margin;
-@panel-title-font-size:                         round(@global-font-size * 0.85); // 12px / 14px
-@panel-title-line-height:                       round(@panel-title-font-size *  1.46); // 18px / 20px
+@panel-title-font-size:                         round((@global-font-size * 0.85)); // 12px / 14px
+@panel-title-line-height:                       round((@panel-title-font-size *  1.46)); // 18px / 20px
 @panel-title-color:                             @global-color;
 @panel-title-text-transform:                    uppercase;
 
