--- a/themes/alpha/less/uikit/navbar.less
+++ b/themes/alpha/less/uikit/navbar.less
@@ -24,11 +24,11 @@
 @navbar-nav-active-background:                  @global-background;
 @navbar-nav-active-color:                       #333335;
 
-@navbar-brand-font-size:                        round(@global-font-size * 1.28); // 18px / 20px
+@navbar-brand-font-size:                        round((@global-font-size * 1.28)); // 18px / 20px
 @navbar-brand-color:                            @global-color;
 @navbar-brand-hover-color:                      #333335;
 
-@navbar-toggle-font-size:                       round(@global-font-size * 1.28); // 18px / 20px
+@navbar-toggle-font-size:                       round((@global-font-size * 1.28)); // 18px / 20px
 @navbar-toggle-color:                           @global-color;
 @navbar-toggle-hover-color:                     #333335;
 
