--- a/themes/alpha/less/uikit/tooltip.less
+++ b/themes/alpha/less/uikit/tooltip.less
@@ -11,8 +11,8 @@
 
 @tooltip-background:                            #333335;
 @tooltip-color:                                 #dbdbdc;
-@tooltip-font-size:                             round(@global-font-size * 0.85); // 12px / 14px
-@tooltip-line-height:                           round(@tooltip-font-size * 1.46); // 18px / 20px
+@tooltip-font-size:                             round((@global-font-size * 0.85)); // 12px / 14px
+@tooltip-line-height:                           round((@tooltip-font-size * 1.46)); // 18px / 20px
 
 
 // Component
