updated admin UIkit theme according to new paths in UIkit 2.11

--- a/extensions/system/theme/less/uikit/uikit.less
+++ b/extensions/system/theme/less/uikit/uikit.less
@@ -3,6 +3,22 @@
 
 @import "../../../../../vendor/assets/uikit/less/uikit.less";
 
+// Components: Common
+@import "./../../../../vendor/assets/uikit/less/components/form-file.less";
+@import "./../../../../vendor/assets/uikit/less/components/form-password.less";
+@import "./../../../../vendor/assets/uikit/less/components/form-select.less";
+@import "./../../../../vendor/assets/uikit/less/components/placeholder.less";
+
+// Components: JavaScript
+@import "./../../../../vendor/assets/uikit/less/components/autocomplete.less";
+@import "./../../../../vendor/assets/uikit/less/components/datepicker.less";
+@import "./../../../../vendor/assets/uikit/less/components/htmleditor.less";
+@import "./../../../../vendor/assets/uikit/less/components/nestable.less";
+@import "./../../../../vendor/assets/uikit/less/components/notify.less";
+@import "./../../../../vendor/assets/uikit/less/components/sortable.less";
+@import "./../../../../vendor/assets/uikit/less/components/sticky.less";
+@import "./../../../../vendor/assets/uikit/less/components/upload.less";
+
 
 // Theme
 // ========================================================================
@@ -53,37 +69,13 @@
 @import "text.less";
 @import "utility.less";
 
+// Components: Common
+@import "form-password.less";
 
-// Add-ons
-// ========================================================================
-
-// Common
-@import "./../../../../vendor/assets/uikit/less/addons/form-file.less";
-@import "./../../../../vendor/assets/uikit/less/addons/form-password.less";
-@import "./../../../../vendor/assets/uikit/less/addons/form-select.less";
-@import "./../../../../vendor/assets/uikit/less/addons/placeholder.less";
-
-// JavaScript
-@import "./../../../../vendor/assets/uikit/less/addons/autocomplete.less";
-@import "./../../../../vendor/assets/uikit/less/addons/datepicker.less";
-@import "./../../../../vendor/assets/uikit/less/addons/htmleditor.less";
-@import "./../../../../vendor/assets/uikit/less/addons/nestable.less";
-@import "./../../../../vendor/assets/uikit/less/addons/notify.less";
-@import "./../../../../vendor/assets/uikit/less/addons/sortable.less";
-@import "./../../../../vendor/assets/uikit/less/addons/sticky.less";
-@import "./../../../../vendor/assets/uikit/less/addons/upload.less";
-
-
-// Add-ons theme
-// ========================================================================
-
-// Common
-@import "addons/form-password.less";
-
-// JavaScript
-@import "addons/datepicker.less";
-@import "addons/htmleditor.less";
-@import "addons/notify.less";
-@import "addons/nestable.less";
-@import "addons/sortable.less";
-@import "addons/sticky.less";
+// Components: JavaScript
+@import "datepicker.less";
+@import "htmleditor.less";
+@import "notify.less";
+@import "nestable.less";
+@import "sortable.less";
+@import "sticky.less";
