updated alpha UIkit theme according to new paths in UIkit 2.11

--- a/themes/alpha/less/uikit/uikit.less
+++ b/themes/alpha/less/uikit/uikit.less
@@ -3,6 +3,12 @@
 
 @import "../../../../vendor/assets/uikit/less/uikit.less";
 
+// Components: Common
+@import "../../../../vendor/assets/uikit/less/components/form-password.less";
+
+// Components: JavaScript
+@import "../../../../vendor/assets/uikit/less/components/search.less";
+
 
 // Theme
 // ========================================================================
@@ -53,12 +59,8 @@
 @import "text.less";
 @import "utility.less";
 
+// Components: Common
+@import "form-password.less";
 
-// Add-ons
-// ========================================================================
-
-@import "../../../../vendor/assets/uikit/less/addons/form-password.less";
-@import "addons/form-password.less";
-
-@import "../../../../vendor/assets/uikit/less/addons/search.less";
-@import "addons/search.less";
+// Components: JavaScript
+@import "search.less";
