--- a/themes/alpha/less/uikit/uikit.less
+++ b/themes/alpha/less/uikit/uikit.less
@@ -3,10 +3,20 @@
 
 @import "../../../../vendor/assets/uikit/less/uikit.less";
 
+// Layout
+@import "../../../../vendor/assets/uikit/less/components/flex.less";
+@import "../../../../vendor/assets/uikit/less/components/cover.less";
+
+// Navs
+@import "../../../../vendor/assets/uikit/less/components/dotnav.less";
+@import "../../../../vendor/assets/uikit/less/components/slidenav.less";
+
 // Components: Common
+@import "../../../../vendor/assets/uikit/less/components/caption.less";
 @import "../../../../vendor/assets/uikit/less/components/form-password.less";
 
 // Components: JavaScript
+@import "../../../../vendor/assets/uikit/less/components/slideshow.less";
 @import "../../../../vendor/assets/uikit/less/components/search.less";
 
 
@@ -59,7 +69,12 @@
 @import "text.less";
 @import "utility.less";
 
+// Components: Navs
+@import "dotnav.less";
+@import "slidenav.less";
+
 // Components: Common
+@import "caption.less";
 @import "form-password.less";
 
 // Components: JavaScript
