updated admin theme uikit

--- a/extensions/system/theme/less/uikit/panel.less
+++ b/extensions/system/theme/less/uikit/panel.less
@@ -41,9 +41,7 @@
 // Sub-object: `uk-panel-title`
 // ========================================================================
 
-.hook-panel-title() {
-
-}
+.hook-panel-title() {}
 
 
 // Sub-object: `uk-panel-badge`
