--- a/extensions/system/theme/less/uikit/thumbnail.less
+++ b/extensions/system/theme/less/uikit/thumbnail.less
@@ -18,9 +18,7 @@
 // Component
 // ========================================================================
 
-.hook-thumbnail() {
-    border-radius: @global-border-radius;
-}
+.hook-thumbnail() { border-radius: @global-border-radius; }
 
 .hook-thumbnail-hover() {}
 
