--- a/extensions/system/theme/less/uikit/uikit.less
+++ b/extensions/system/theme/less/uikit/uikit.less
@@ -73,6 +73,7 @@
 @import "form-password.less";
 
 // Components: JavaScript
+@import "autocomplete.less";
 @import "datepicker.less";
 @import "htmleditor.less";
 @import "notify.less";
