--- a/extensions/system/theme/less/uikit/sortable.less
+++ b/extensions/system/theme/less/uikit/sortable.less
@@ -3,6 +3,26 @@
 //
 // ========================================================================
 
-.uk-sortable-dragged {
-    z-index: @global-z-index + 50;
-}
+
+// Variables
+// ========================================================================
+
+@sortable-dragged-z-index:                      @global-z-index + 50;
+
+
+// Component
+// ========================================================================
+
+.hook-sortable() {}
+
+.hook-sortable-dragged() {}
+
+.hook-sortable-placeholder() {}
+
+.hook-sortable-over() {}
+
+
+// Miscellaneous
+// ========================================================================
+
+.hook-sortable-misc() {}
