fixed icon path

--- a/extensions/system/modules/theme/less/theme.less
+++ b/extensions/system/modules/theme/less/theme.less
@@ -1,5 +1,5 @@
 @import "uikit/uikit.less";
-@import "../../assets/less/pagekit.less";
+@import "../../../assets/less/pagekit.less";
 
 /* ========================================================================
    Theme
