--- a/extensions/system/modules/theme/less/uikit/icon.less
+++ b/extensions/system/modules/theme/less/uikit/icon.less
@@ -7,7 +7,7 @@
 // Variables
 // ========================================================================
 
-@icon-font-path:                                "../../../../vendor/assets/uikit/fonts";
+@icon-font-path:                                "../../../../../vendor/assets/uikit/fonts";
 
 @icon-button-height:                            @icon-button-width;
 @icon-button-background:                        @global-default-background;
