--- a/extensions/system/modules/installer/assets/less/installer.less
+++ b/extensions/system/modules/installer/assets/less/installer.less
@@ -1,4 +1,4 @@
-@import "../../../system/theme/less/uikit/uikit.less";
+@import "../../../theme/less/uikit/uikit.less";
 
 /* ========================================================================
    Theme
