added system scripts

--- a/extensions/system/assets/less/pagekit.less
+++ b/extensions/system/assets/less/pagekit.less
@@ -2,6 +2,8 @@
    Pagekit
  ========================================================================== */
 
+[v-cloak] { display: none; }
+
 /* Column layout
 ========================================================================== */
 
