fixed asset paths

--- a/extensions/system/assets/less/pagekit.less
+++ b/extensions/system/assets/less/pagekit.less
@@ -350,7 +350,7 @@
     margin: 4px 0 0 5px;
     width: 10px;
     height: 20px;
-    background: url("../../assets/images/nestable-handle.svg") 0 0 no-repeat;
+    background: url("../../../assets/images/nestable-handle.svg") 0 0 no-repeat;
 }
 
 .pk-nestable-handle:hover { cursor: move; }
@@ -404,17 +404,17 @@
  */
 
 .pk-thumbnail-folder {
-    background-image: url("../../assets/images/finder-folder.svg");
+    background-image: url("../../../assets/images/finder-folder.svg");
     background-size: 50px 50px;
 }
 
 .pk-thumbnail-file {
-    background-image: url("../../assets/images/finder-file.svg");
+    background-image: url("../../../assets/images/finder-file.svg");
     background-size: 50px 50px;
 }
 
 .pk-thumbnail-image {
-    background-image: url("../../assets/images/placeholder-icon.svg");
+    background-image: url("../../../assets/images/placeholder-icon.svg");
     background-size: 50px 50px;
 }
 
