updated admin uikit theme for uikit 2.18

--- a/extensions/system/modules/theme/less/uikit/text.less
+++ b/extensions/system/modules/theme/less/uikit/text.less
@@ -17,6 +17,7 @@
 @text-success-color:                            #80c96d;
 @text-warning-color:                            #ff9a2e;
 @text-danger-color:                             #f0615b;
+@text-contrast-color:                           @global-contrast-color;
 
 
 // Miscellaneous
