--- a/extensions/system/modules/theme/less/uikit/icon.less
+++ b/extensions/system/modules/theme/less/uikit/icon.less
@@ -9,6 +9,9 @@
 
 @icon-font-path:                                "../../../../../vendor/assets/uikit/fonts";
 
+@icon-hover-color:                              @global-muted-color;
+@icon-hover-hover-color:                        @global-color;
+
 @icon-button-height:                            @icon-button-width;
 @icon-button-background:                        @global-default-background;
 @icon-button-font-size:                         round((@icon-button-width * 0.5));
@@ -26,6 +29,14 @@
 
 @icon-button-border:                            rgba(0,0,0,0.1);
 @icon-button-hover-border:                      rgba(0,0,0,0.15);
+
+
+// Modifier: `uk-icon-hover`
+// ========================================================================
+
+.hook-icon-hover() {}
+
+.hook-icon-hover-hover() {}
 
 
 // Modifier: `uk-icon-button`
