--- a/extensions/system/modules/theme/less/uikit/overlay.less
+++ b/extensions/system/modules/theme/less/uikit/overlay.less
@@ -7,34 +7,31 @@
 // Variables
 // ========================================================================
 
-@overlay-area-background:                       rgba(255,255,255,0.95);
+@overlay-panel-color:                           @global-contrast-color;
 
-@overlay-area-icon-color:                       #aaa;
+@overlay-panel-background:                      rgba(255,255,255,0.95);
 
-@overlay-area-content-color:                    #444;
-
-@overlay-caption-padding:                       @global-margin;
-@overlay-caption-color:                         @global-contrast-color;
+@overlay-icon-color:                            #aaa;
 
 
-// Sub-object `uk-overlay-area`
+// Sub-object `uk-overlay-panel`
 // ========================================================================
 
-.hook-overlay-area() {}
-
-.hook-overlay-area-icon() {}
+.hook-overlay-panel() {}
 
 
-// Sub-object `uk-overlay-area-content`
+// Sub-object `uk-overlay-background`
 // ========================================================================
 
-.hook-overlay-area-content() {}
+.hook-overlay-background() {
+    color: @global-color;
+}
 
 
-// Sub-object `uk-overlay-caption`
+// Sub-object `uk-overlay-icon`
 // ========================================================================
 
-.hook-overlay-caption() {}
+.hook-overlay-icon() {}
 
 
 // Miscellaneous
@@ -42,6 +39,6 @@
 
 .hook-overlay-misc() {
 
-	.uk-overlay:hover { min-height: 100px; }
+    .uk-overlay:hover { min-height: 100px; }
 
 }
