--- a/extensions/system/modules/theme/less/uikit/panel.less
+++ b/extensions/system/modules/theme/less/uikit/panel.less
@@ -24,6 +24,11 @@
 
 @panel-box-secondary-background:                @global-default-background;
 
+@panel-hover-padding:                           @global-margin;
+@panel-hover-color:                             @global-color;
+@panel-hover-hover-color:                       @global-color;
+@panel-hover-hover-background:                  @global-background;
+
 @panel-header-title-border:                     @global-border;
 @panel-header-title-color:                      @global-color;
 
@@ -36,6 +41,8 @@
 //
 
 @panel-box-border:                              @global-border;
+
+@panel-hover-border:                            @global-border;
 
 
 // Sub-object: `uk-panel-title`
@@ -58,9 +65,26 @@
     border-radius: @global-border-radius;
 }
 
+.hook-panel-box-hover() {}
+
 .hook-panel-box-primary() {}
 
+.hook-panel-box-primary-hover() {}
+
 .hook-panel-box-secondary() {}
+
+.hook-panel-box-secondary-hover() {}
+
+
+// Modifier: `uk-panel-hover`
+// ========================================================================
+
+.hook-panel-hover() {
+    border: 1px solid transparent;
+    border-radius: @global-border-radius;
+}
+
+.hook-panel-hover-hover() { border-color: @panel-hover-border; }
 
 
 // Modifier: `uk-panel-header`
